RESOLVED FIXED26819
[Chromium] Bad merge in V8Proxy causing some xpath layout tests failures
https://bugs.webkit.org/show_bug.cgi?id=26819
Summary [Chromium] Bad merge in V8Proxy causing some xpath layout tests failures
Nate Chapin
Reported 2009-06-29 16:33:34 PDT
See summary.
Attachments
patch (1.14 KB, patch)
2009-06-29 16:36 PDT, Nate Chapin
dglazkov: review+
Nate Chapin
Comment 1 2009-06-29 16:36:38 PDT
Dimitri Glazkov (Google)
Comment 2 2009-06-29 16:40:40 PDT
Comment on attachment 32026 [details] patch r=me.
Nate Chapin
Comment 3 2009-06-29 16:46:46 PDT
Landed as r45359.
Note You need to log in before you can comment on or make changes to this bug.