2009-06-29  Nate Chapin  <japhet@chromium.org>

Reviewed by Dimitri Glazkov.

        Fix one more bad merge in V8Proxy.

        https://bugs.webkit.org/show_bug.cgi?id=26819



Canonical link: https://commits.webkit.org/37042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45359 268f45cc-cd09-0410-ab3c-d52691b4dbfc